@@ -10,10 +10,10 @@ kotlin {
 }
 
 dependencies {
-    api(project(":annotations"))
-    implementation("io.github.oshai:kotlin-logging-jvm:7.0.3")
+    api(projects.annotations)
+    implementation(libs.kotlin.logging)
     testImplementation(kotlin("test"))
-    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2")
+    testImplementation(libs.kotlinx.coroutines.core)
 }
 
 publishing {
@@ -26,4 +26,6 @@ publishing {
 
 tasks.test {
     useJUnitPlatform()
+
+    jvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
